--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
 	<build>
 
+ 		<finalName>mazegame</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -28,7 +29,59 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<instrumentation>
+						<excludes>
+							<exclude>com/mazegame/view/cmd/main/**/*.class</exclude>
+							<exclude>com/mazegame/view/cmd/printer/*</exclude>
+							<exclude>com/mazegame/view/cmd/views/*</exclude>
+							<exclude>com/mazegame/view/cmd/views/input/*</exclude>
+							<exclude>com/mazegame/view/menu/*</exclude>
+						</excludes>
+					</instrumentation>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>clean</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.mazegame.view.cmd.main.App</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
 
 		</plugins>
 	</build>
+	<reporting>
+
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<check></check>
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
+				</configuration>
+			</plugin>
+		</plugins>
+
+	</reporting>
 </project>
